extend - create return range directly, without delegation to merge